--- a/angular/demo/index.html
+++ b/angular/demo/index.html
@@ -1,13 +1,16 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Demo</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/arrow-right.svg">
 </head>
+
 <body>
   <demo></demo>
 </body>
+
 </html>
